+ add patch for ortho view (j-dowsett)
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5310 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Drawing/Gui/TaskOrthoViews.ui
+++ b/src/Mod/Drawing/Gui/TaskOrthoViews.ui
@@ -321,7 +321,7 @@
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_4">
            <item>
-            <widget class="QLineEdit" name="s1">
+            <widget class="QLineEdit" name="spacing1">
              <property name="enabled">
               <bool>false</bool>
              </property>
@@ -331,7 +331,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="s2">
+            <widget class="QLineEdit" name="spacing2">
              <property name="enabled">
               <bool>false</bool>
              </property>
