+ added dot icons to Draft
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5322 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -37,6 +37,8 @@
         <file>icons/Draft_Draft2Sketch.svg</file>
         <file>icons/Draft_Array.svg</file>
         <file>icons/Draft_Cursor.svg</file>
+        <file>icons/Draft_Dot.svg</file>
+        <file>icons/Draft_Point.svg</file>
         <file>patterns/concrete.svg</file>
         <file>patterns/cross.svg</file>
         <file>patterns/line.svg</file>
