+ allow negative values in revolve task panel
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5351 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/PartDesign/Gui/TaskRevolutionParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskRevolutionParameters.ui
@@ -53,6 +53,9 @@
        <property name="decimals">
         <number>1</number>
        </property>
+       <property name="minimum">
+        <double>-360.000000000000000</double>
+       </property>
        <property name="maximum">
         <double>360.000000000000000</double>
        </property>
