+ implement primitive dialog as task panel
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5370 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Part/Gui/DlgPrimitives.ui
+++ b/src/Mod/Part/Gui/DlgPrimitives.ui
@@ -966,7 +966,7 @@
                <item row="0" column="1">
                 <widget class="QDoubleSpinBox" name="wedgeXmin">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -976,7 +976,7 @@
                <item row="0" column="2">
                 <widget class="QDoubleSpinBox" name="wedgeXmax">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -996,7 +996,7 @@
                <item row="1" column="1">
                 <widget class="QDoubleSpinBox" name="wedgeYmin">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -1006,7 +1006,7 @@
                <item row="1" column="2">
                 <widget class="QDoubleSpinBox" name="wedgeYmax">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -1026,7 +1026,7 @@
                <item row="2" column="1">
                 <widget class="QDoubleSpinBox" name="wedgeZmin">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -1036,7 +1036,7 @@
                <item row="2" column="2">
                 <widget class="QDoubleSpinBox" name="wedgeZmax">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -1056,7 +1056,7 @@
                <item row="3" column="1">
                 <widget class="QDoubleSpinBox" name="wedgeX2min">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -1069,7 +1069,7 @@
                <item row="3" column="2">
                 <widget class="QDoubleSpinBox" name="wedgeX2max">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -1089,7 +1089,7 @@
                <item row="4" column="1">
                 <widget class="QDoubleSpinBox" name="wedgeZ2min">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
@@ -1102,7 +1102,7 @@
                <item row="4" column="2">
                 <widget class="QDoubleSpinBox" name="wedgeZ2max">
                  <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
