--- a/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
+++ b/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
@@ -60,6 +60,7 @@
         <file>icons/Sketcher_CreateText.svg</file>
         <file>icons/Sketcher_DraftLine.svg</file>
         <file>icons/Sketcher_Trimming.svg</file>
+        <file>icons/Sketcher_External.svg</file>
         <file>icons/Sketcher_LeaveSketch.svg</file>
         <file>icons/Sketcher_NewSketch.svg</file>
         <file>icons/Sketcher_Sketch.svg</file>
